Restructure group commands to /embedize group <id> add|remove <pack>
Put group id before actions, manage datapack packs (with resolved
namespaces) instead of the old ns subcommand syntax.

Co-authored-by: Asagiri <AsagiriBeta@users.noreply.github.com>