@@ -6,7 +6,6 @@ import com.embedize.compat.MultiverseHook;
 import com.embedize.config.PluginConfig;
 import com.embedize.group.GroupManager;
 import com.embedize.group.StructureGroup;
-import com.embedize.structure.IsolationPolicy;
 import com.embedize.structure.StructureIsolationListener;
 import com.embedize.util.SchedulerUtil;
 import net.kyori.adventure.text.Component;
@@ -73,184 +72,201 @@ public final class EmbedizeCommand implements CommandExecutor, TabCompleter {
                 }
                 runInstall(sender);
             }
-            case "group" -> handleGroup(sender, args);
+            case "group" -> handleGroup(sender, label, args);
             case "help" -> sendHelp(sender, label);
             default -> sendHelp(sender, label);
         }
         return true;
     }
 
-    private void handleGroup(CommandSender sender, String[] args) {
+    /**
+     * Syntax:
+     *   /embedize group list|create|delete ...
+     *   /embedize group <id> info|add|remove|allow|deny ...
+     */
+    private void handleGroup(CommandSender sender, String label, String[] args) {
         LuckPermsHook lp = plugin.getLuckPermsHook();
         GroupManager gm = plugin.getGroupManager();
         if (args.length < 2) {
-            sender.sendMessage(Component.text(
-                    "/embedize group <create|delete|list|info|ns|world> ...", NamedTextColor.YELLOW));
+            sendGroupHelp(sender, label);
             return;
         }
-        String action = args[1].toLowerCase(Locale.ROOT);
+
+        String second = args[1].toLowerCase(Locale.ROOT);
+
+        // Global group ops (no group id yet)
+        if (second.equals("list")) {
+            listGroups(sender, lp, gm);
+            return;
+        }
+        if (second.equals("create")) {
+            if (!lp.canManageGroups(sender)) {
+                deny(sender);
+                return;
+            }
+            if (args.length < 3) {
+                sender.sendMessage(Component.text("Usage: /" + label + " group create <id> [display]", NamedTextColor.RED));
+                return;
+            }
+            String id = args[2];
+            String display = args.length >= 4 ? String.join(" ", Arrays.copyOfRange(args, 3, args.length)) : id;
+            if (gm.create(id, display)) {
+                sender.sendMessage(Component.text("Created group '" + id + "'.", NamedTextColor.GREEN));
+            } else {
+                sender.sendMessage(Component.text("Cannot create group (invalid id or already exists).", NamedTextColor.RED));
+            }
+            return;
+        }
+        if (second.equals("delete")) {
+            if (!lp.canManageGroups(sender)) {
+                deny(sender);
+                return;
+            }
+            if (args.length < 3) {
+                sender.sendMessage(Component.text("Usage: /" + label + " group delete <id>", NamedTextColor.RED));
+                return;
+            }
+            if (gm.delete(args[2])) {
+                sender.sendMessage(Component.text("Deleted group '" + args[2] + "'.", NamedTextColor.GREEN));
+            } else {
+                sender.sendMessage(Component.text("Group not found.", NamedTextColor.RED));
+            }
+            return;
+        }
+
+        // /embedize group <id> <action> ...
+        String groupId = args[1];
+        Optional<StructureGroup> opt = gm.get(groupId);
+        if (opt.isEmpty()) {
+            sender.sendMessage(Component.text("Unknown group '" + groupId + "'. Use create/list/delete, or /" + label + " group <id> ...", NamedTextColor.RED));
+            return;
+        }
+        StructureGroup group = opt.get();
+
+        if (args.length < 3) {
+            sender.sendMessage(Component.text("Usage: /" + label + " group " + group.getId()
+                    + " <info|add|remove|allow|deny>", NamedTextColor.YELLOW));
+            return;
+        }
+
+        String action = args[2].toLowerCase(Locale.ROOT);
         switch (action) {
-            case "list" -> {
-                if (!lp.canManageGroups(sender) && !lp.hasAdmin(sender)) {
-                    // allow view if any group view perm — still show list of ids they can see
-                    boolean any = gm.all().stream().anyMatch(g -> lp.canViewGroup(sender, g.getId()));
-                    if (!any) {
-                        deny(sender);
-                        return;
-                    }
-                }
-                sender.sendMessage(Component.text("Groups:", NamedTextColor.GOLD));
-                for (StructureGroup g : gm.all()) {
-                    if (!lp.canViewGroup(sender, g.getId()) && !lp.canManageGroups(sender)) {
-                        continue;
-                    }
-                    sender.sendMessage(Component.text(
-                            " - " + g.getId() + " (" + g.getDisplayName() + ") ns=" + g.getNamespaces().size()
-                                    + " worlds=" + g.getAllowedWorlds(),
-                            NamedTextColor.GRAY));
-                }
-            }
-            case "create" -> {
-                if (!lp.canManageGroups(sender)) {
-                    deny(sender);
-                    return;
-                }
-                if (args.length < 3) {
-                    sender.sendMessage(Component.text("Usage: /embedize group create <id> [display]", NamedTextColor.RED));
-                    return;
-                }
-                String id = args[2];
-                String display = args.length >= 4 ? String.join(" ", Arrays.copyOfRange(args, 3, args.length)) : id;
-                if (gm.create(id, display)) {
-                    sender.sendMessage(Component.text("Created group '" + id + "'.", NamedTextColor.GREEN));
-                } else {
-                    sender.sendMessage(Component.text("Cannot create group (invalid id or already exists).", NamedTextColor.RED));
-                }
-            }
-            case "delete" -> {
-                if (!lp.canManageGroups(sender)) {
-                    deny(sender);
-                    return;
-                }
-                if (args.length < 3) {
-                    sender.sendMessage(Component.text("Usage: /embedize group delete <id>", NamedTextColor.RED));
-                    return;
-                }
-                if (gm.delete(args[2])) {
-                    sender.sendMessage(Component.text("Deleted group '" + args[2] + "'.", NamedTextColor.GREEN));
-                } else {
-                    sender.sendMessage(Component.text("Group not found.", NamedTextColor.RED));
-                }
-            }
             case "info" -> {
-                if (args.length < 3) {
-                    sender.sendMessage(Component.text("Usage: /embedize group info <id>", NamedTextColor.RED));
-                    return;
-                }
-                Optional<StructureGroup> opt = gm.get(args[2]);
-                if (opt.isEmpty()) {
-                    sender.sendMessage(Component.text("Group not found.", NamedTextColor.RED));
-                    return;
-                }
-                StructureGroup g = opt.get();
-                if (!lp.canViewGroup(sender, g.getId())) {
+                if (!lp.canViewGroup(sender, group.getId())) {
                     deny(sender);
                     return;
                 }
-                sender.sendMessage(Component.text("--- Group " + g.getId() + " ---", NamedTextColor.GOLD));
-                sender.sendMessage(Component.text("display: " + g.getDisplayName(), NamedTextColor.GRAY));
-                sender.sendMessage(Component.text("namespaces: " + g.getNamespaces(), NamedTextColor.GRAY));
-                sender.sendMessage(Component.text("allowed-worlds: " + g.getAllowedWorlds(), NamedTextColor.GRAY));
-                sender.sendMessage(Component.text("perm manage: " + LuckPermsHook.groupManagePermission(g.getId()), NamedTextColor.DARK_AQUA));
+                sender.sendMessage(Component.text("--- Group " + group.getId() + " ---", NamedTextColor.GOLD));
+                sender.sendMessage(Component.text("display: " + group.getDisplayName(), NamedTextColor.GRAY));
+                sender.sendMessage(Component.text("packs: " + group.getPacks(), NamedTextColor.GRAY));
+                sender.sendMessage(Component.text("namespaces: " + group.getNamespaces(), NamedTextColor.GRAY));
+                sender.sendMessage(Component.text("allowed-worlds: " + group.getAllowedWorlds(), NamedTextColor.GRAY));
+                sender.sendMessage(Component.text("perm: " + LuckPermsHook.groupManagePermission(group.getId()), NamedTextColor.DARK_AQUA));
             }
-            case "ns", "namespace" -> handleNamespace(sender, args, lp, gm);
-            case "world", "worlds" -> handleGroupWorld(sender, args, lp, gm);
-            default -> sender.sendMessage(Component.text(
-                    "/embedize group <create|delete|list|info|ns|world> ...", NamedTextColor.YELLOW));
+            case "add" -> {
+                if (!lp.canManageGroup(sender, group.getId())) {
+                    deny(sender);
+                    return;
+                }
+                if (args.length < 4) {
+                    sender.sendMessage(Component.text("Usage: /" + label + " group " + group.getId() + " add <pack>", NamedTextColor.RED));
+                    return;
+                }
+                String pack = args[3];
+                String result = gm.addPackToGroup(group.getId(), pack);
+                handlePackResult(sender, result, group.getId(), pack, true);
+                plugin.getPluginConfig().rebuildIsolationPolicy();
+            }
+            case "remove" -> {
+                if (!lp.canManageGroup(sender, group.getId())) {
+                    deny(sender);
+                    return;
+                }
+                if (args.length < 4) {
+                    sender.sendMessage(Component.text("Usage: /" + label + " group " + group.getId() + " remove <pack>", NamedTextColor.RED));
+                    return;
+                }
+                String pack = args[3];
+                String result = gm.removePackFromGroup(group.getId(), pack);
+                handlePackResult(sender, result, group.getId(), pack, false);
+                plugin.getPluginConfig().rebuildIsolationPolicy();
+            }
+            case "allow" -> {
+                if (!lp.canManageGroup(sender, group.getId())) {
+                    deny(sender);
+                    return;
+                }
+                if (args.length < 4) {
+                    sender.sendMessage(Component.text("Usage: /" + label + " group " + group.getId() + " allow <world>", NamedTextColor.RED));
+                    return;
+                }
+                group.addWorld(args[3]);
+                gm.save();
+                plugin.getPluginConfig().rebuildIsolationPolicy();
+                sender.sendMessage(Component.text(group.getId() + " allowed-worlds: " + group.getAllowedWorlds(), NamedTextColor.GREEN));
+            }
+            case "deny" -> {
+                if (!lp.canManageGroup(sender, group.getId())) {
+                    deny(sender);
+                    return;
+                }
+                if (args.length < 4) {
+                    sender.sendMessage(Component.text("Usage: /" + label + " group " + group.getId() + " deny <world>", NamedTextColor.RED));
+                    return;
+                }
+                group.removeWorld(args[3]);
+                gm.save();
+                plugin.getPluginConfig().rebuildIsolationPolicy();
+                sender.sendMessage(Component.text(group.getId() + " allowed-worlds: " + group.getAllowedWorlds(), NamedTextColor.GREEN));
+            }
+            default -> sender.sendMessage(Component.text("Usage: /" + label + " group " + group.getId()
+                    + " <info|add|remove|allow|deny>", NamedTextColor.YELLOW));
         }
     }
 
-    private void handleNamespace(CommandSender sender, String[] args, LuckPermsHook lp, GroupManager gm) {
-        // /embedize group ns add|remove <group> <namespace>
-        if (args.length < 5) {
-            sender.sendMessage(Component.text("Usage: /embedize group ns <add|remove> <group> <namespace>", NamedTextColor.RED));
-            return;
-        }
-        String op = args[2].toLowerCase(Locale.ROOT);
-        String groupId = args[3];
-        String ns = args[4];
-        if (!lp.canManageGroup(sender, groupId)) {
-            deny(sender);
-            return;
-        }
-        Optional<StructureGroup> opt = gm.get(groupId);
-        if (opt.isEmpty()) {
-            sender.sendMessage(Component.text("Group not found.", NamedTextColor.RED));
-            return;
-        }
-        StructureGroup g = opt.get();
-        if ("add".equals(op)) {
-            if ("minecraft".equalsIgnoreCase(ns)) {
-                sender.sendMessage(Component.text("Cannot manage vanilla minecraft: namespace.", NamedTextColor.RED));
-                return;
+    private void handlePackResult(CommandSender sender, String result, String groupId, String pack, boolean adding) {
+        switch (result) {
+            case "ok" -> {
+                Optional<StructureGroup> g = plugin.getGroupManager().get(groupId);
+                sender.sendMessage(Component.text(
+                        (adding ? "Added" : "Removed") + " pack '" + pack + "' "
+                                + (adding ? "→" : "from") + " group " + groupId
+                                + (g.map(gr -> " (packs=" + gr.getPacks() + ", ns=" + gr.getNamespaces() + ")").orElse("")),
+                        NamedTextColor.GREEN));
             }
-            // Ensure namespace not already in another group (first-match policy)
-            Optional<StructureGroup> existing = gm.findByNamespace(ns);
-            if (existing.isPresent() && !existing.get().getId().equals(g.getId())) {
-                sender.sendMessage(Component.text("Namespace already in group '" + existing.get().getId() + "'.", NamedTextColor.RED));
-                return;
+            case "noop" -> sender.sendMessage(Component.text("No change.", NamedTextColor.YELLOW));
+            case "not-found" -> sender.sendMessage(Component.text("Group not found.", NamedTextColor.RED));
+            case "vanilla" -> sender.sendMessage(Component.text("Cannot manage vanilla minecraft structures.", NamedTextColor.RED));
+            default -> {
+                if (result.startsWith("ns-taken:")) {
+                    String[] parts = result.split(":", 3);
+                    sender.sendMessage(Component.text(
+                            "Namespace '" + (parts.length > 2 ? parts[2] : "?") + "' already in group '"
+                                    + (parts.length > 1 ? parts[1] : "?") + "'.",
+                            NamedTextColor.RED));
+                } else {
+                    sender.sendMessage(Component.text("Failed: " + result, NamedTextColor.RED));
+                }
             }
-            if (g.addNamespace(ns)) {
-                gm.save();
-                plugin.getPluginConfig().rebuildIsolationPolicy();
-                sender.sendMessage(Component.text("Added namespace '" + ns + "' to " + g.getId(), NamedTextColor.GREEN));
-            } else {
-                sender.sendMessage(Component.text("Namespace already present or invalid.", NamedTextColor.YELLOW));
-            }
-        } else if ("remove".equals(op)) {
-            if (g.removeNamespace(ns)) {
-                gm.save();
-                plugin.getPluginConfig().rebuildIsolationPolicy();
-                sender.sendMessage(Component.text("Removed namespace '" + ns + "' from " + g.getId(), NamedTextColor.GREEN));
-            } else {
-                sender.sendMessage(Component.text("Namespace not in group.", NamedTextColor.YELLOW));
-            }
-        } else {
-            sender.sendMessage(Component.text("Usage: /embedize group ns <add|remove> <group> <namespace>", NamedTextColor.RED));
         }
     }
 
-    private void handleGroupWorld(CommandSender sender, String[] args, LuckPermsHook lp, GroupManager gm) {
-        // /embedize group world allow|deny <group> <world>
-        if (args.length < 5) {
-            sender.sendMessage(Component.text("Usage: /embedize group world <allow|deny> <group> <world>", NamedTextColor.RED));
-            return;
+    private void listGroups(CommandSender sender, LuckPermsHook lp, GroupManager gm) {
+        if (!lp.canManageGroups(sender) && !lp.hasAdmin(sender)) {
+            boolean any = gm.all().stream().anyMatch(g -> lp.canViewGroup(sender, g.getId()));
+            if (!any) {
+                deny(sender);
+                return;
+            }
         }
-        String op = args[2].toLowerCase(Locale.ROOT);
-        String groupId = args[3];
-        String world = args[4];
-        if (!lp.canManageGroup(sender, groupId)) {
-            deny(sender);
-            return;
-        }
-        Optional<StructureGroup> opt = gm.get(groupId);
-        if (opt.isEmpty()) {
-            sender.sendMessage(Component.text("Group not found.", NamedTextColor.RED));
-            return;
-        }
-        StructureGroup g = opt.get();
-        if ("allow".equals(op)) {
-            g.addWorld(world);
-            gm.save();
-            plugin.getPluginConfig().rebuildIsolationPolicy();
-            sender.sendMessage(Component.text(g.getId() + " allowed-worlds: " + g.getAllowedWorlds(), NamedTextColor.GREEN));
-        } else if ("deny".equals(op)) {
-            g.removeWorld(world);
-            gm.save();
-            plugin.getPluginConfig().rebuildIsolationPolicy();
-            sender.sendMessage(Component.text(g.getId() + " allowed-worlds: " + g.getAllowedWorlds(), NamedTextColor.GREEN));
-        } else {
-            sender.sendMessage(Component.text("Usage: /embedize group world <allow|deny> <group> <world>", NamedTextColor.RED));
+        sender.sendMessage(Component.text("Groups:", NamedTextColor.GOLD));
+        for (StructureGroup g : gm.all()) {
+            if (!lp.canViewGroup(sender, g.getId()) && !lp.canManageGroups(sender)) {
+                continue;
+            }
+            sender.sendMessage(Component.text(
+                    " - " + g.getId() + " packs=" + g.getPacks() + " worlds=" + g.getAllowedWorlds(),
+                    NamedTextColor.GRAY));
         }
     }
 
@@ -286,7 +302,7 @@ public final class EmbedizeCommand implements CommandExecutor, TabCompleter {
         sender.sendMessage(Component.text("allowed: " + listener.getAllowedCount()
                 + "  denied: " + listener.getCancelledCount()
                 + "  passed: " + listener.getPassedCount(), NamedTextColor.GRAY));
-        sender.sendMessage(Component.text("LuckPerms: " + (lp.isPresent() ? "yes" : "no (Bukkit perms still work)")
+        sender.sendMessage(Component.text("LuckPerms: " + (lp.isPresent() ? "yes" : "no")
                 + "  Multiverse: " + (listener.getMultiverseHook().isPresent() ? "yes" : "no")
                 + "  TFG: " + (listener.getMultiverseHook().isTerraformGeneratorPresent() ? "yes" : "no"),
                 NamedTextColor.GRAY));
@@ -297,7 +313,7 @@ public final class EmbedizeCommand implements CommandExecutor, TabCompleter {
         GroupManager gm = plugin.getGroupManager();
         MultiverseHook hook = plugin.getIsolationListener().getMultiverseHook();
         boolean resolve = plugin.getPluginConfig().isResolveAliases();
-        sender.sendMessage(Component.text("World × group matrix (managed structures):", NamedTextColor.GOLD));
+        sender.sendMessage(Component.text("World × group matrix:", NamedTextColor.GOLD));
         for (World world : Bukkit.getWorlds()) {
             List<String> allowedGroups = new ArrayList<>();
             for (StructureGroup g : gm.all()) {
@@ -312,14 +328,18 @@ public final class EmbedizeCommand implements CommandExecutor, TabCompleter {
                     allowedGroups.isEmpty() ? NamedTextColor.DARK_GRAY : NamedTextColor.GREEN
             ));
         }
-        sender.sendMessage(Component.text("Vanilla minecraft: structures always generate in all worlds.", NamedTextColor.DARK_AQUA));
     }
 
     private void sendHelp(CommandSender sender, String label) {
         sender.sendMessage(Component.text("/" + label + " reload|status|worlds|install|group ...", NamedTextColor.YELLOW));
-        sender.sendMessage(Component.text("/" + label + " group create|delete|list|info <id>", NamedTextColor.DARK_GRAY));
-        sender.sendMessage(Component.text("/" + label + " group ns add|remove <group> <namespace>", NamedTextColor.DARK_GRAY));
-        sender.sendMessage(Component.text("/" + label + " group world allow|deny <group> <world>", NamedTextColor.DARK_GRAY));
+        sendGroupHelp(sender, label);
+    }
+
+    private void sendGroupHelp(CommandSender sender, String label) {
+        sender.sendMessage(Component.text("/" + label + " group list|create <id>|delete <id>", NamedTextColor.DARK_GRAY));
+        sender.sendMessage(Component.text("/" + label + " group <id> info", NamedTextColor.DARK_GRAY));
+        sender.sendMessage(Component.text("/" + label + " group <id> add|remove <pack>", NamedTextColor.DARK_GRAY));
+        sender.sendMessage(Component.text("/" + label + " group <id> allow|deny <world>", NamedTextColor.DARK_GRAY));
     }
 
     private void deny(CommandSender sender) {
@@ -331,28 +351,37 @@ public final class EmbedizeCommand implements CommandExecutor, TabCompleter {
         if (args.length == 1) {
             return filter(args[0], Arrays.asList("reload", "status", "worlds", "install", "group", "help"));
         }
-        if (args.length >= 2 && args[0].equalsIgnoreCase("group")) {
-            if (args.length == 2) {
-                return filter(args[1], Arrays.asList("create", "delete", "list", "info", "ns", "world"));
+        if (!args[0].equalsIgnoreCase("group")) {
+            return List.of();
+        }
+        List<String> groupIds = new ArrayList<>(plugin.getGroupManager().ids());
+        List<String> packIds = plugin.getPluginConfig().getDatapackSources().stream()
+                .map(PluginConfig.DatapackSource::id)
+                .collect(Collectors.toCollection(ArrayList::new));
+        if (!packIds.contains("dungeons-and-taverns")) {
+            packIds.add("dungeons-and-taverns");
+        }
+
+        if (args.length == 2) {
+            List<String> opts = new ArrayList<>(Arrays.asList("list", "create", "delete"));
+            opts.addAll(groupIds);
+            return filter(args[1], opts);
+        }
+        String second = args[1].toLowerCase(Locale.ROOT);
+        if (args.length == 3 && second.equals("delete")) {
+            return filter(args[2], groupIds);
+        }
+        // group <id> ...
+        if (plugin.getGroupManager().get(args[1]).isPresent()) {
+            if (args.length == 3) {
+                return filter(args[2], Arrays.asList("info", "add", "remove", "allow", "deny"));
             }
-            String action = args[1].toLowerCase(Locale.ROOT);
-            if (args.length == 3 && List.of("delete", "info").contains(action)) {
-                return filter(args[2], new ArrayList<>(plugin.getGroupManager().ids()));
+            String action = args[2].toLowerCase(Locale.ROOT);
+            if (args.length == 4 && (action.equals("add") || action.equals("remove"))) {
+                return filter(args[3], packIds);
             }
-            if (args.length == 3 && (action.equals("ns") || action.equals("namespace"))) {
-                return filter(args[2], Arrays.asList("add", "remove"));
-            }
-            if (args.length == 3 && (action.equals("world") || action.equals("worlds"))) {
-                return filter(args[2], Arrays.asList("allow", "deny"));
-            }
-            if (args.length == 4 && (action.equals("ns") || action.equals("world") || action.equals("worlds"))) {
-                return filter(args[3], new ArrayList<>(plugin.getGroupManager().ids()));
-            }
-            if (args.length == 5 && (action.equals("world") || action.equals("worlds"))) {
-                return filter(args[4], Bukkit.getWorlds().stream().map(World::getName).collect(Collectors.toList()));
-            }
-            if (args.length == 5 && (action.equals("ns") || action.equals("namespace"))) {
-                return filter(args[4], Arrays.asList("nova_structures"));
+            if (args.length == 4 && (action.equals("allow") || action.equals("deny"))) {
+                return filter(args[3], Bukkit.getWorlds().stream().map(World::getName).collect(Collectors.toList()));
             }
         }
         return List.of();
